--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>重庆邮电大学开源镜像站 | CQUPT OpenSource Mirror</title>
   </head>
   <body>
     <div id="app"></div>
