refactor(api): change to new backend endpoint

--- a/src/assets/status.html
+++ b/src/assets/status.html
@@ -416,7 +416,7 @@
             }
         };
         var xmlhttp = new XMLHttpRequest();
-        var res = "/static/tunasync.json"
+        var res = "/mirrors"
         var tbody = document.getElementById('status').getElementsByTagName('tbody')[0]
         xmlhttp.onreadystatechange = function () {
             if (this.readyState == 4) {
