feat(status): parse and sort size

--- a/public/status.html
+++ b/public/status.html
@@ -367,6 +367,74 @@
             }
         })();
     </script>
+    <script>
+        (function () {
+            var compareNumber = function (a, b) {
+                a = parseFloat(a);
+                b = parseFloat(b);
+
+                a = isNaN(a) ? 0 : a;
+                b = isNaN(b) ? 0 : b;
+
+                return a - b;
+            },
+
+                cleanNumber = function (i) {
+                    return i.replace(/[^\-?0-9.]/g, '');
+                },
+
+                // Returns suffix multiplier
+                // Ex. suffix2num('KB') -> 1000
+                // Ex. suffix2num('KiB') -> 1024
+                suffix2num = function (suffix) {
+                    suffix = suffix.toLowerCase();
+                    var base = suffix[1] === 'i' ? 1024 : 1000;
+
+                    switch (suffix[0]) {
+                        case 'k':
+                            return Math.pow(base, 2);
+                        case 'm':
+                            return Math.pow(base, 3);
+                        case 'g':
+                            return Math.pow(base, 4);
+                        case 't':
+                            return Math.pow(base, 5);
+                        case 'p':
+                            return Math.pow(base, 6);
+                        case 'e':
+                            return Math.pow(base, 7);
+                        case 'z':
+                            return Math.pow(base, 8);
+                        case 'y':
+                            return Math.pow(base, 9);
+                        default:
+                            return base;
+                    }
+                },
+
+                // Converts filesize to bytes
+                // Ex. filesize2num('123 KB') -> 123000
+                // Ex. filesize2num('123 KiB') -> 125952
+                filesize2num = function (filesize) {
+                    var matches = filesize.match(/^(\d+(\.\d+)?) ?((K|M|G|T|P|E|Z|Y|B$)i?B?)$/i);
+                    if (!matches) return 0;
+
+                    var num = parseFloat(cleanNumber(matches[1])),
+                        suffix = matches[3];
+
+                    return num * suffix2num(suffix);
+                };
+
+            Tablesort.extend('filesize', function (item) {
+                return /^(\d+(\.\d+)? ?(K|M|G|T|P|E|Z|Y|B$)i?B?|Unknown)$/i.test(item);
+            }, function (a, b) {
+                a = filesize2num(a);
+                b = filesize2num(b);
+
+                return compareNumber(b, a);
+            });
+        }());
+    </script>
 </head>
 
 <body>
@@ -407,7 +475,15 @@
         <iframe src="https://grafana.redrock.team/d-solo/aL8twHeGk/mirrors?orgId=1&theme=light&panelId=24" width="49%" height="400" frameborder="0"></iframe>
     </div> -->
     <script>
-        var genStatus = function(code, msg) {
+        var fileSizeToReadable = function (bytes) {
+            var exp = Math.log(bytes) / Math.log(1024) | 0;
+            var result = (bytes / Math.pow(1024, exp)).toFixed(2);
+            if (result >= 0)
+                return result + ' ' + (exp == 0 ? 'B' : 'KMGTPEZY'[exp - 1] + 'B');
+            else
+                return "Unknown"
+        };
+        var genStatus = function (code, msg) {
             if (code != 'failed') {
                 if (code == 'syncing') return '🔄';
                 if (code == 'pause') return '⏸️ ';
@@ -433,7 +509,7 @@
                             '<td class="withComment">' + genStatus(e.status, e.errorMsg) + '</td>' +
                             '<td>' + (e.nextSchedule > 0 ? (new Date(e.nextSchedule*1000)).toLocaleString() : '') + '</td>' +
                             '<td>' + e.upstream + '</td>' +
-                            '<td>' + e.sizeStr + '</td>';
+                            '<td>' + fileSizeToReadable(e.size) + '</td>';
                         if (e.status == 'failed') {
                             row.className += 'failedSync';
                         }
